[gd_scene load_steps=5 format=2]

[ext_resource path="res://bomb.gd" type="Script" id=1]
[ext_resource path="res://sprite/pix_pigz_rainbow.png" type="Texture" id=2]
[ext_resource path="res://sunds/rocket2.ogg" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 5.0

[node name="bomb" type="Area2D"]
collision_layer = 2
collision_mask = 10
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="rocket_start" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="area_shape_entered" from="." to="." method="_on_bomb_area_shape_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_bomb_body_shape_entered"]
[connection signal="screen_exited" from="Sprite/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
